ui fix: forms, api link change

--- a/src/creators/index.html
+++ b/src/creators/index.html
@@ -29,7 +29,7 @@
                 src="/assets/images/main_logo.svg"
               />
             </a>
-            <h2 class="creator" id="header-title">For Creator</h2>
+            <h2 class="creator" id="header-title">For Creators</h2>
           </div>
           <button class="button-sign">Sign up now</button>
         </div>
@@ -122,7 +122,7 @@
                     </div>
                     <div class="form-elements">
                       <div class="first-last-name">
-                        <div class="mb-2">
+                        <div class="mb-3">
                           <label
                             for="FormControlInput1"
                             class="form-label required"
@@ -137,7 +137,7 @@
                           />
                         </div>
 
-                        <div class="mb-2 lastname-inp">
+                        <div class="mb-3 lastname-inp">
                           <label
                             for="FormControlTextarea1"
                             class="form-label required"
@@ -153,7 +153,7 @@
                         </div>
                       </div>
                       <div class="email-phone">
-                        <div class="mb-2">
+                        <div class="mb-3 emailDiv">
                           <label for="email" class="form-label required"
                             >Email</label
                           >
@@ -169,7 +169,7 @@
                           >
                         </div>
 
-                        <div class="mb-2 phone-inp">
+                        <div class="mb-3 phone-inp">
                           <label for="FormControlTextarea1" class="form-label"
                             >Phone number</label
                           >
@@ -222,7 +222,7 @@
                           >
                         </div>
                       </div>
-                      <div class="mb-2 username-input">
+                      <div class="mb-3 username-input">
                         <label for="FormControlTextarea1" class="form-label">
                           Requested Username</label
                         >
