--- a/src/fans/index.html
+++ b/src/fans/index.html
@@ -120,11 +120,11 @@
                         <img src="/assets/images/emoji-icon.png" />
                         Sign up now
                       </h1>
-                      <p>Join the KNKY revolution today!</p>
+                      <p class="mt-2">Join the KNKY revolution today!</p>
                     </div>
                     <div class="form-elements">
                       <div class="first-last-name">
-                        <div class="mb-2">
+                        <div class="mb-3 ">
                           <label
                             for="FormControlInput1"
                             class="form-label required"
@@ -139,7 +139,7 @@
                           />
                         </div>
 
-                        <div class="mb-2 lastname-inp">
+                        <div class="mb-3 lastname-inp">
                           <label
                             for="FormControlTextarea1"
                             class="form-label required"
@@ -155,7 +155,7 @@
                         </div>
                       </div>
                       <div class="email-phone">
-                        <div class="mb-2">
+                        <div class="mb-3 emailDiv">
                           <label for="email" class="form-label required"
                             >Email</label
                           >
@@ -171,7 +171,7 @@
                           >
                         </div>
 
-                        <div class="mb-2 phone-inp">
+                        <div class="mb-3 phone-inp">
                           <label for="FormControlTextarea1" class="form-label"
                             >Phone number</label
                           >
@@ -224,7 +224,7 @@
                           >
                         </div>
                       </div>
-                      <div class="mb-2 username-input">
+                      <div class="mb-3 username-input">
                         <label for="FormControlTextarea1" class="form-label">
                           Requested Username</label
                         >
