feat: replay when slide In

--- a/src/fans/index.html
+++ b/src/fans/index.html
@@ -89,27 +89,27 @@
 
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <video id="s1" autoplay loop muted playsinline></video>
+                <video id="s1" autoplay muted playsinline></video>
               </div>
 
               <div class="carousel-item">
-                <video id="s2" autoplay loop muted playsinline></video>
+                <video id="s2" muted playsinline></video>
               </div>
 
               <div class="carousel-item">
-                <video id="s3" autoplay loop muted playsinline></video>
+                <video id="s3" muted playsinline></video>
               </div>
 
               <div class="carousel-item">
-                <video id="s4" autoplay loop muted playsinline></video>
+                <video id="s4" muted playsinline></video>
               </div>
 
               <div class="carousel-item">
-                <video id="s5" autoplay loop muted playsinline></video>
+                <video id="s5" muted playsinline></video>
               </div>
 
               <div class="carousel-item">
-                <video id="s6" autoplay loop muted playsinline></video>
+                <video id="s6" muted playsinline></video>
               </div>
 
               <div class="carousel-item">
