fix: validation issue, ext types

--- a/src/creators/index.html
+++ b/src/creators/index.html
@@ -480,10 +480,10 @@
                           id="username"
                           name="username"
                         />
-                        <!-- <span class="validation-message" id="valid-username"
+                        <span class="validation-message" id="valid-username"
                           >This username already exists,please enter another
                           one.</span
-                        > -->
+                        >
                       </div>
                       <div class="terms-content">
                         <p>
