fix: country code ui and form spacings

--- a/src/creators/index.html
+++ b/src/creators/index.html
@@ -165,7 +165,7 @@
                             placeholder="Your first name"
                           />
                           <span class="validation-message" id="valid-fname"
-                          >First name must contain at least 3 characters.</span
+                          >Min 3 characters required</span
                         >
                         </div>
 
@@ -183,7 +183,7 @@
                             placeholder="Your last name"
                           />
                           <span class="validation-message" id="valid-lname"
-                          >Last name must contain at least 3 characters.</span
+                          >Min 3 characters required</span
                         >
                         </div>
                       </div>
