--- a/src/fans/index.html
+++ b/src/fans/index.html
@@ -168,7 +168,7 @@
                             placeholder="Your first name"
                           />
                           <span class="validation-message" id="valid-fname"
-                          >First name must contain at least 3 characters.</span
+                          >Min 3 characters required</span
                         >
                         </div>
 
@@ -186,7 +186,7 @@
                             placeholder="Your last name"
                           />
                           <span class="validation-message" id="valid-lname"
-                          >Last name must contain at least 3 characters.</span
+                          >Min 3 characters required</span
                         >
                         </div>
                       </div>
