--- a/src/index.html
+++ b/src/index.html
@@ -1,54 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, user-scalable=no" />
-    <link rel="shortcut icon" href="/assets/knky.svg" />
-    <title>KNKY Expo</title>
 
-    <link rel="stylesheet" href="./style.css" />
-  </head>
-  <body>
-    <div id="app">
-      <img class="bg" src="https://expo.knky.co/static/bg.jpg" alt="BG" />
-      <header class="header-container" id="header-text">
-        <div class="creator-head">
-          <div class="creatortext">
-            <a href="/">
-              <img
-                class="framecontainer-icon"
-                src="/assets/images/main_logo.svg"
-              />
-            </a>
-          </div>
-          <button
-            onclick="window.location.href='/creators/?signup=true';"
-            class="button-sign"
-            id="signup-btn"
-          >
-            Sign up now
-          </button>
-          <!-- <button class="button-register">Register</button> -->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, user-scalable=no" />
+  <link rel="shortcut icon" href="/assets/knky.svg" />
+  <title>KNKY Expo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="./style.css" />
+</head>
+
+<body>
+  <div id="app">
+    <img class="bg" src="https://expo.knky.co/static/bg.jpg" alt="BG" />
+    <header class="header-container" id="header-text">
+      <div class="creator-head">
+        <div class="creatortext">
+          <a href="/">
+            <img class="framecontainer-icon" src="/assets/images/main_logo.svg" />
+          </a>
         </div>
-      </header>
-      <video id="landingVideo" class="bg" autoplay muted playsinline></video>
-
-      <div class="btn-wrapper">
-
-        <button class="landing-btn" id="creatorBtn" >
-          <img src="/assets/images/woman-bikini.svg" />
-          <p>I'm a Creator</p>
+        <button data-bs-target="#featureModal" data-bs-toggle="modal" class="button-sign" id="signup-btn">
+          Sign up now
         </button>
-  
-        <button class="landing-btn" id="fanBtn">
-          <img src="/assets/images/smiley.svg" />
-          <p>I'm a Fan</p>
-        </button>
+        <!-- <button class="button-register">Register</button> -->
       </div>
+    </header>
+    <video id="landingVideo" class="bg" autoplay muted playsinline></video>
 
-      <footer class="vegas-expo">© 2024 KNKY®</footer>
+    <div class="btn-wrapper">
+
+      <button class="landing-btn" id="creatorBtn">
+        <img src="/assets/images/woman-bikini.svg" />
+        <p>I'm a Creator</p>
+      </button>
+
+      <button class="landing-btn" id="fanBtn">
+        <img src="/assets/images/smiley.svg" />
+        <p>I'm a Fan</p>
+      </button>
     </div>
 
-    <script type="module" src="./script.js"></script>
-  </body>
+    <footer class="vegas-expo">© 2024 KNKY®</footer>
+  </div>
+  <div class="modal fade" id="featureModal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content thankyou-banner">
+        <div class="btn-wrapper-signup d-flex  flex-column gap-2 my-2 mx-2">
+
+          <button onclick="window.location.href='/creators/?signup=true';"
+            class="btn-creator signup-btn d-flex gap-2 align-items-center">
+            <img src="/assets/images/woman-bikini.svg" />
+            <p class="mb-0"> Creator</p>
+          </button>
+
+          <button onclick="window.location.href='/fans/?signup=true';"
+            class="btn-fan signup-btn  d-flex  gap-2 align-items-center">
+            <img src="/assets/images/smiley.svg" />
+            <p class="mb-0"> Fan</p>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script type="module" src="./script.js"></script>
+</body>
+
 </html>
