--- a/src/fans/index.html
+++ b/src/fans/index.html
@@ -10,6 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/spin.js/2.3.2/spin.min.js"></script>
 
   <link rel="stylesheet" href="../style.css" />
   <link rel="stylesheet" href="./fans.css" />
@@ -120,6 +121,8 @@
             </div>
 
             <div class="carousel-item">
+              <div id="spinner-container"></div>
+
               <form id="signupForm">
                 <div class="form-banner">
                   <div class="form-elements">
@@ -158,7 +161,7 @@
                         <div class="country-inp">
                           <div class="country-code">
                             <img id="c-flag" src="https://flagcdn.com/16x12/us.png" />
-                            <input onchange="checkCountry()" class="flag-input" value="+1" />
+                            <input onchange="checkCountry()" id="phone-code" class="flag-input" value="+1" />
                           </div>
                           <script>
                             let countryList = {
@@ -401,7 +404,7 @@
                               ).src = `https://flagcdn.com/16x12/${country.toLowerCase()}.png`;
                             }
                           </script>
-                          <input type="tel" class="form-control" id="FormControlInput1" placeholder="00 000 000" />
+                          <input type="tel" class="form-control" id="phone-no" placeholder="00 000 000" />
                         </div>
                         <span class="validation-message" id="phone">This phone number is already in used</span>
                       </div>
